Fix text wrap to wrap

--- a/css/style.css
+++ b/css/style.css
@@ -886,6 +886,11 @@ h3.my-profession {
   .home .home-img {
     display: none;
   }
+
+  .about .about-content .personal-info .info-item p {
+    inline-size: 150px;
+    overflow-wrap: break-all;
+  }
 }
 
 @media (max-width: 767px) {
